--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "http": "0.0.0",
     "morgan": "~1.8.1",
+    "querystring": "^0.2.0",
     "serve-favicon": "~2.4.2",
     "socket.io": "^1.7.4",
     "spotify-web-api-node": "^2.4.0"
